음악 중지 추가 음악 관련 클래스는 Music 디렉토리에

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name=".MusicPlay"
+            android:name=".Music.MusicPlay"
             android:enabled="true"
             android:exported="true"></service>
     </application>
